<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/game_pause"
        android:id="@+id/pause"></item>

    <item
        android:title="@string/restart"
        android:id="@+id/restart"></item>

    <item android:title="@string/setting">
        <menu>
            <group android:checkableBehavior="all">
                <item
                    android:id="@+id/sound"
                    android:title="@string/sound"
                    android:checked="true" />
                <item
                    android:id="@+id/vibrate"
                    android:title="@string/vibrate"
                    android:checked="true" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/about"
        android:title="@string/about" />
</menu>